--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kindle",
   "version": "0.0.1",
   "description": "a mail-pusher for kindle based on node",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,6 +25,7 @@
   "dependencies": {
     "colorful": "*",
     "nodemailer": "*",
-    "request": "*"
+    "request": "*",
+    "optimist": "*"
   }
 }
