--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kindle",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "description": "a mail-pusher for kindle based on node",
   "main": "index.js",
   "scripts": {
@@ -25,10 +25,8 @@
   "dependencies": {
     "colorful": "*",
     "nodemailer": "*",
-    "request": "*",
-    "optimist": "*"
-  },
-  "kindle": {
-    "mime": "false"
+    "optimist": "*",
+    "async": "*",
+    "markdown": "*"
   }
 }
