--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "kindle",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "a mail-pusher for kindle based on node",
   "main": "index.js",
+  "bin": "./bin/cli",
+  "author": "turing <o.u.turing@gmail.com>",
+  "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,22 +14,22 @@
     "url": "https://github.com/turingou/kindle"
   },
   "keywords": [
-      "kindle",
-      "mail"
+    "kindle",
+    "mobi",
+    "elink",
+    "e-link",
+    "sendmail",
+    "ebook",
+    "book",
+    "mail"
   ],
-  "author": "turingou",
-  "license": "BSD",
   "bugs": {
     "url": "https://github.com/turingou/kindle/issues"
   },
-  "bin": {
-    "kindle": "./bin/cli"
-  },
   "dependencies": {
-    "colorful": "*",
-    "nodemailer": "*",
-    "optimist": "*",
     "async": "*",
-    "markdown-pdf": "*"
+    "fsplus": "*",
+    "consoler": "*",
+    "nodemailer": "*"
   }
 }
