--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "url": "https://github.com/turingou/kindle/issues"
   },
   "dependencies": {
-    "async": "^0.9.0",
-    "consoler": "^0.2.0",
-    "fsplus": "^0.1.0",
-    "nodemailer": "0.7.0",
+    "ansi": "^0.3.1",
     "colorful": "*",
-    "optimist": "*",
-    "markdown-pdf": "*"
+    "fsplus": "^0.1.0",
+    "markdown-pdf": "*",
+    "minimist": "^1.2.0",
+    "nodemailer": "^2.6.4",
+    "optimist": "*"
   }
 }
